<?xml version="1.0"?>
<package format="2">
  <name>bin_bt_plugins</name>
  <version>0.0.0</version>
  <description>The bin_bt_plugin package</description>

  <maintainer email="Tianqi@todo.todo">Tianqi </maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>mp_behavior_tree</depend>
  <depend>vision</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

  <license>TODO</license>

</package>
